...
  Widget build(BuildContext context) {
    return Column(
      children: <Widget>[
        Padding(
          padding: const EdgeInsets.all(16.0),
          child: Text(
            translate('app.info.title'),
            key: const Key('app.info.title'),
            style: Theme.of(context).textTheme.titleLarge,
            textAlign: TextAlign.center,
          ),
        ),
        Expanded(
...
                value:
                    ThemeProvider.themeOf(context).id.compareTo('dark_theme') ==
                        0,
                onChanged: (changed) =>
                    ThemeProvider.controllerOf(context).nextTheme(),
                title: Text(
                  translate('app.info.dark_title'),
                  key: const Key('app.info.dark_title'),
                ),
                subtitle: Text(
                  translate('app.info.dark_description'),
                  key: const Key('app.info.dark_description'),
                ),
              ),
              ListTile(
                title: Text(
                  translate(
                    kIsWeb ? 'app.info.app_title' : 'app.info.web_title',
                  ),
                  key: const Key(
                    kIsWeb ? 'app.info.app_title' : 'app.info.web_title',
                  ),
                ),
                subtitle: Text(
...
                },
              ),
              Visibility(
                visible: !kIsWeb,
                child: ListTile(
                  title: Text(
                    translate('app.info.rate_title'),
                    key: const Key('app.info.rate_title'),
                  ),
                  subtitle: Text(
                    translate('app.info.rate_description'),
                    key: const Key('app.info.rate_description'),
                  ),
                  leading: const Icon(UniconsLine.feedback),
                  onTap: () async => putReview(),
                ),
              ),
              ListTile(
                title: Text(
                  translate('app.info.feedback_title'),
                  key: const Key('app.info.feedback_title'),
                ),
                subtitle: Text(
                  translate('app.info.feedback_description'),
                  key: const Key('app.info.feedback_description'),
                ),
...
                    throw 'Could not launch $url because $e';
                  }
                },
              ),
              ListTile(
                title: Text(
                  translate('app.info.version.title'),
                  key: const Key('app.info.version.title'),
                ),
                subtitle: Text(
                  translate('app.info.version.description'),
                  key: const Key('app.info.version.description'),
                ),
...
      builder: (BuildContext context) => AlertDialog(
        contentPadding: const EdgeInsets.all(16.0),
        title: Consumer(
          builder: (context, ref, child) {
            return ref.watch(versionAppProvider).when(
                  data: (version) => Text(
                    '${translate('app.info.version.dialog_title')} ($version)',
                    key: const Key('app.info.version.dialog_title'),
                  ),
                  error: (error, stackTrace) => Text(
                    translate('app.info.version.dialog_title'),
                    key: const Key('app.info.version.dialog_title'),
                  ),
...
                  : const Loader();
            },
          ),
        ),
        actions: <Widget>[
          OutlinedButton(
            key: const Key('app.info.version.dialog_button'),
            child: Text(
              translate('app.info.version.dialog_button'),
            ),
            onPressed: () => Navigator.of(context).pop(),
          )
        ],
...
